# GKM

./: Assignment 1.docx  Assignment 2.odt  README.md  dep.sh
documentation/evaluation/: diffPlot.py  evaluation_0.txt  evaluation_1.txt  evil.txt  posPlot.py
exercise_1.3/: .gitignore  CMakeLists.txt  package.xml
exercise_1.3/src/: .gitignore  pointcloud.cpp  pointcloud.h
exercise_1_2/: CMakeLists.txt  exercise_1_2.txt  package.xml
exercise_1_2/src/: exercise_1_2_node.cpp  exercise_1_2_node.h
exercise_2_1_dvo/: CMakeLists.txt  exercise_2.txt  package.xml  readme.txt  timestamp error.txt
exercise_2_1_dvo/include/: dvo.h
exercise_2_1_dvo/launch/: exercise_2_1_dvo_node.launch
exercise_2_1_dvo/src/: dvo.cpp  exercise_2_1_dvo_node.cpp
exercise_2_1_dvo/tests/: evalutate_ate.txt  evalutate_rpe.txt  numeric_evalutate_ate.txt  numeric_evalutate_rpe.txt  test_analytical.txt  test_num_1.txt  test_num_16.txt  test_num_2.txt  test_num_32.txt  test_num_4.txt  test_num_8.txt
exercise_3_1_simulator/ex3_solution/: package.xml
exercise_3_1_simulator/ex3_solution/include/: printMeasurements.py  se3ukf.hpp  uav_controller.hpp
exercise_3_1_simulator/server/euroc_challenge3_simulator/euroc_simulation_server/urdf/: firefly_t3_2.gazebo.xacro  firefly_t3_3.gazebo.xacro
lsd_slam_msgs/: CMakeLists.txt  package.xml
lsd_slam_rviz_plugins/: CMakeLists.txt  package.xml  plugin_description.xml
lsd_slam_rviz_plugins/include/: buffer_visual.h  camera_visual.h  keyframe_display.h  keyframe_graph_display.h  keyframe_visual.h  ros_depth_texture.h  texture_visual.h
lsd_slam_rviz_plugins/launch/: rviz_display.launch
lsd_slam_rviz_plugins/shaders/: basic.frag  basic.material  basic.vert  pointcloud.geom  pointcloud.vert  pointcloud_to_mesh.geom
lsd_slam_rviz_plugins/src/: buffer_visual.cpp  camera_visual.cpp  keyframe_display.cpp  keyframe_graph_display.cpp  keyframe_visual.cpp  ros_depth_texture.cpp  texture_visual.cpp
misc/: deriveErrNumeric.m
pcl_visualizer/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  package.xml  pcl_visualizer  pcl_visualizer.cpp  pcl_visualizer_demo.cpp
project/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
project/cfg/: config.cfg
project/include/: PcMeshBuilder.h  PcMeshBuilderV2.h  plane.hpp
project/launch/: project.launch
project/src/: .kdev_include_paths  PcMeshBuilder.cpp  PcMeshBuilderV2.cpp
rviz_pointcloud_graph_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
rviz_pointcloud_graph_plugin/include/: point_cloud2_graph_display.h
rviz_pointcloud_graph_plugin/src/: .point_cloud2_graph_display.cpp.kate-swp  point_cloud2_graph_display.cpp
sheet2_dvo/: CMakeLists.txt
sheet2_dvo/src/: dvo.cpp  sheet2_dvo_node.cpp
surface_detection_msgs/: CMakeLists.txt  package.xml
surface_detection_msgs/msg/: Surface.msg
te_joy_controller/: CMakeLists.txt  package.xml
te_joy_controller/src/: controller_node.cpp  controller_node.h
te_joy_controller/src/launch/: te_joy_controller.launch
te_joy_inspection_controller/: CMakeLists.txt  package.xml
te_joy_inspection_controller/launch/: inspection_mav.launch  inspection_simulator.launch  inspection_simulator_rgbd.launch  te_joy_controller.launch
te_joy_inspection_controller/src/: controller_node.cpp  controller_node.h  deadzone.h
te_joy_inspection_controller/src/launch/: hover.launch  inspection.launch  inspection_mav.launch  inspection_simulator.launch  te_neo_inspection.launch
te_surface_detection/: CMakeLists.txt  package.xml
te_surface_detection/cfg/: config.cfg
te_surface_detection/include/: PolygonArray.hpp  cylinder.hpp  plane.hpp  surface_detection.h  typedef.h
te_surface_detection/src/: surface_detection.cpp
undistort/: CMakeLists.txt  package.xml
undistort/src/: undistort_node.cpp  undistort_node.h
