<?xml version="1.0"?>
<package>
  <name>project</name>
  <version>0.0.0</version>
  <description>The project package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="philipp_mueller1991@yahoo.de">philipp mueller</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>visualization_msgs</build_depend>
  
  <run_depend>image_geometry</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
